ID-1131 ECM Code Cleanup (#176)
* app code uses provider enum

* database migration

* remove unnecessary optionals

* migrate oidc api to oauth api

* increase test coverage